--- a/students/src/main/webapp/index.xhtml
+++ b/students/src/main/webapp/index.xhtml
@@ -2,13 +2,13 @@
           "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
     xmlns:h="http://xmlns.jcp.org/jsf/html"
-    xmlns:f="http://xmlns.jcp.org/jsf/core">
+    xmlns:f="http://xmlns.jcp.org/jsf/core"
+    xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 <head>
   <title><ui:insert name="title">Gestión de Alumnos</ui:insert></title>
 </head>
 
 <body>
-    <p:spinner />
 
 	<h2>Gestion de Alumnos</h2>
 	<h3>Seleccione una opción</h3>
